eXosip2 (3.3.0)
	* Fix when 200ok include a contact with an empty line parameter.
	* Fix for replaces header longuer than 256 char.
	* Fix SRV record with more than 10 answers.
	* Sort SRV record.
	* Option to disable NAPTR requests.
	
eXosip2 (3.2.0)
	* Improve TLS support and add an API for ssl information & files.
	* return new error code for all API.
	* remove automatic answers to PRACK. (must be done in application now)
	* remove automatically outgoing non established susbscriptions.

eXosip2 (3.1.0)
	* AKA authentication.
	* improve compliance & flexibility.

eXosip2 (3.0.4)
	* fix building SUBSCRIBE refresh.
	* fix compliance issue with refer-to to-tag/from-tag parameters.
	* fix bug for retransmissions or ACK with proxy that resolve
	  to several IP.
	* handle the "expires" parameter to update registration interval.
	* handle the "expires" parameter to update publication interval.
	* handle automatically publish refresh, and some error codes (423).
	
eXosip2 (3.0.3)
	* Add TLS support.
	* rewrite transport layer.
	* add line= parameter in Contact headers for registrations.
	* a few changes related to interop. issues.
	* add missing *_REQUESTFAILURE events on no answer.
	* Update registration interval when Expires header is in 200ok.
	
eXosip2 (3.0.2)
	* fix call transfer issue with "Replaces" header.
	* allow build/run eXosip in non-threaded model (without -DOSIP_MT).
	* initial support for ucos.
	* add support for qop authentication.
	* remove registration context immediatly upon eXosip_register_remove.
	* TCP: fix missing Contact in INVITE sent.
	* TCP: fix missing "transport" in Contact for answers within dialog.
	* TCP: fix possible race conditions.
	
eXosip2 (3.0.1)
	* add Windows CE support with Visual Studio 2005
	  (WM5.0,PocketPC 2003/2005, Smartphone)
	* Update to osip2-3.0.1
	* Add SRV record capabilities.
	* add new OPTIONS: do not send 101, remove pre-route set from message.
	
eXosip2 (2.2.3)
	* announce NOTIFY answers to application.